Summary of important user-visible changes for Windows 1.6.2
------------------------------------------------------------

* use QueryInterface to get IDispatch pointer (Bug #62019)

* detect when octave_base_dld_value is available


Summary of important user-visible changes for Windows 1.6.1
------------------------------------------------------------

* Allow passing optional paramters to methods (Bug #60098)

* Minor doc updates

Summary of important user-visible changes for Windows 1.6.0
------------------------------------------------------------

* added new functions:
  - clipboard
  - windows_feature
  - win32_RegEnumValue
  - win32_RegEnumKey
  - win32_WriteRegistry
  - win32_DeleteRegistry

* bugfix: compile issue on octave <= 4.0.X

* bugfix: winqueryreg error on use of "name" parameter

* use utf-8 encoding for octave 5.2+


Summary of important user-visible changes for Windows 1.5.0
------------------------------------------------------------

 ** bugfix return empty value for a null dispatch type

 ** add override methods function

 ** allow no arg function access without requiring use of ().

 ** added package documentation

Summary of important user-visible changes for Windows 1.4.0
------------------------------------------------------------
 ** added winopen function

 ** added COM conversion of arrays of double and char, 
    and unsigned conversions

 ** bugfix winqueryreg root prefix check and expanded to convert to
    octave type similar to octave core function

Summary of important user-visible changes for Windows 1.3.1
------------------------------------------------------------
  ** updated configure files for 5.0 octave function changes

  ** requires octave >= 3.6

  ** lock __COM__.oct when package is loaded

Summary of important user-visible changes for Windows 1.3.0
------------------------------------------------------------
  ** updated configure files for 4.4 octave
