@@ -1,3 +1,8 @@
+Summary of important user-visible changes for Windows 1.6.2+
+------------------------------------------------------------
+
+* use call EmptyClipboard in performing clipboard copy (Bug #62877)
+
 Summary of important user-visible changes for Windows 1.6.2
 ------------------------------------------------------------
 
